# db_courseproject

./: README.md  main.py  pyproject.toml
config/: config.py  database.ini.example
src/: db_manager.py  hh_api.py  utils.py
